Fixed spacing for code blocks.

--- a/_assets/_sass/_base.scss
+++ b/_assets/_sass/_base.scss
@@ -71,6 +71,7 @@ li {
   > ul,
   > ol {
     margin-bottom: 0;
+    margin-left: 10;
   }
 }
 
